AdminIfTest is passing with jeri and jsse.